# iEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.zh.md  rollup.config.js  tsconfig.json
assets/textures/Metal001_1K-PNG/: Metal001_1K-PNG.mtlx  Metal001_1K-PNG.usdc
docs/: engine-arch.drawio  engine-arch.md
examples/: index.html
examples/web/: index.html  package.json  pnpm-lock.yaml  server.js
iEngine-Native/: CMakeLists.txt  CMakeUserPresets.json  README.md  build.bat  vcpkg.json
iEngine-Native/Engine/: CMakeLists.txt  README.md
iEngine-Native/Engine/include/iengine/: iengine.h
iEngine-Native/Engine/include/iengine/core/: Engine.h  Enums.h  IRenderable.h  Mesh.h  Model.h  Primitive.h
iEngine-Native/Engine/include/iengine/geometries/: Cube.h  Geometry.h  Triangle.h
iEngine-Native/Engine/include/iengine/lights/: AmbientLight.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
iEngine-Native/Engine/include/iengine/materials/: BaseMaterial.h  Color.h  Material.h  MaterialManager.h  PbrMaterial.h  PhongMaterial.h
iEngine-Native/Engine/include/iengine/math/: Matrix2.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h
iEngine-Native/Engine/include/iengine/renderers/: Context.h  Renderer.h
iEngine-Native/Engine/include/iengine/renderers/opengl/: OpenGLContext.h  OpenGLRenderPipeline.h  OpenGLRenderer.h  OpenGLShaderProgram.h  OpenGLUniforms.h
iEngine-Native/Engine/include/iengine/scenes/: Scene.h
iEngine-Native/Engine/include/iengine/shaders/: ShaderLib.h  ShaderPreprocessor.h
iEngine-Native/Engine/include/iengine/shaders/glsl/: BaseMaterialShader.h  BasePbrShader.h  BasePhongShader.h  BaseWireframeShader.h
iEngine-Native/Engine/include/iengine/shaders/wgsl/: BaseMaterialShader.h  BasePbrShader.h  BaseWireframeShader.h
iEngine-Native/Engine/include/iengine/textures/: Texture.h  Texture3D.h  TextureUtils.h
iEngine-Native/Engine/include/iengine/views/cameras/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
iEngine-Native/Engine/include/iengine/views/controls/: BaseControls.h  FirstPersonControls.h  OrbitControls.h
iEngine-Native/Engine/include/iengine/windowing/: Window.h  WindowFactory.h
iEngine-Native/Engine/src/core/: Engine.cpp  Mesh.cpp  Model.cpp  Primitive.cpp
iEngine-Native/Engine/src/geometries/: Cube.cpp  Geometry.cpp  Triangle.cpp
iEngine-Native/Engine/src/lights/: AmbientLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
iEngine-Native/Engine/src/materials/: BaseMaterial.cpp  Color.cpp  Material.cpp  MaterialManager.cpp  PbrMaterial.cpp  PhongMaterial.cpp
iEngine-Native/Engine/src/math/: Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp
iEngine-Native/Engine/src/renderers/opengl/: OpenGLContext.cpp  OpenGLRenderPipeline.cpp  OpenGLRenderer.cpp  OpenGLShaderProgram.cpp  OpenGLUniforms.cpp
iEngine-Native/Engine/src/scenes/: Scene.cpp
iEngine-Native/Engine/src/shaders/: ShaderLib.cpp  ShaderPreprocessor.cpp
iEngine-Native/Engine/src/shaders/glsl/: BaseMaterialShader.cpp  BasePbrShader.cpp  BasePhongShader.cpp  BaseWireframeShader.cpp
iEngine-Native/Engine/src/shaders/wgsl/: BaseMaterialShader.cpp  BasePbrShader.cpp  BaseWireframeShader.cpp
iEngine-Native/Engine/src/textures/: Texture.cpp  Texture3D.cpp  TextureUtils.cpp
iEngine-Native/Engine/src/utils/: def.cpp
iEngine-Native/Engine/src/views/cameras/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
iEngine-Native/Engine/src/views/controls/: FirstPersonControls.cpp  OrbitControls.cpp
iEngine-Native/Engine/src/windowing/: WindowEventSystem.cpp  WindowFactory.cpp
iEngine-Native/Sandbox/: CMakeLists.txt
iEngine-Native/Sandbox/include/sandbox/: MainOpenGLWidget.h  MainWindow.h
iEngine-Native/Sandbox/src/: EngineCoreTest.cpp  GLFWWindow.cpp  GLFWWindow.h  GlfwAppExample.cpp  MainOpenGLWidget.cpp  MainWindow.cpp  MainWindow.h  QtAppExample.cpp  QtWindow.cpp  QtWindow.h  main.cpp
iEngine-Native/docs/: iEngine-Arch.md
iEngine-Web/: README.md  package-lock.json  package.json
iEngine-Web/examples/: dual-sync-views.html  dual-view-example.html  eagle-minimap.html  index.html  quad-views-sync.html  two-independent-canvases.html
iEngine-Web/examples/lib/: style.css
iEngine-Web/src/: index.ts
iEngine-Web/src/core/: Component.ts  Engine.ts  Entity.ts  Node.ts  RenderView.ts  System.ts  SystemManager.ts
iEngine-Web/src/ecs/: ComponentType.ts  Entity.ts  System.ts  SystemManager.ts  WorldECS.ts
iEngine-Web/src/geometries/: Triangle.ts
iEngine-Web/src/lights/: AmbientLight.ts  DirectionalLight.ts  Light.ts  LightComponent.ts
iEngine-Web/src/materials/: BaseMaterial.ts  Color.ts  Material.ts  PbrMaterial.ts  PhongMaterial.ts
iEngine-Web/src/math/: Math.ts  Matrix4.ts  Vector2.ts  Vector3.ts  index.ts
iEngine-Web/src/renderers/: Context.ts  IUniform.ts  RenderLayer.ts  RenderSystem.ts  RenderView.ts  Renderable.ts  RenderableComponent.ts  Renderer.ts
iEngine-Web/src/scenes/: Scene.ts  World.ts
iEngine-Web/src/shaders/: ShaderPreprocessor.ts
iEngine-Web/src/tests/: ecs-example.ts  ecs-light-example.ts  ecs-test.ts  example-ecs.ts
iEngine-Web/src/textures/: Texture.ts  Texture3D.ts
src/: Api.cpp  Api.h  Constants.h  Engine.cpp  Engine.h  Enum.h  Impls.cpp  Mesh.cpp  Mesh.h  RenderThread.cpp  RenderThread.h  Scene.cpp  Scene.h  VertexAttrs.h  example_1 copy.cpp  example_2.cpp  example_3.cpp  index.ts  main.cpp
src/cameras/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/core/: Engine.ts  IRenderable.ts  Mesh.ts  Model.cpp  Model.h  Model.ts  Primitive.ts
src/geometries/: Cube.ts  Geometry.ts
src/lights/: PointLight.ts  SpotLight.ts
src/materials/: Material.h  MaterialManager.ts
src/math/: Matrix2.ts  Matrix3.ts
src/renderers/: BaseUniforms.h  BufferDescriptor.ts  Renderer.cpp  Renderer.h  TextureDescriptor.ts
src/scenes/: Scene.ts  SimpleScene.ts
src/shaders/: ShaderLib.ts
src/texture/: TextureImage.h
src/textures/: TextureUtils.ts
src/windows/: GlfwWindow.cpp  GlfwWindow.h  HtmlWindow.cpp  HtmlWindow.h  Window.cpp  Window.h
(+55 files in other folders)
